--- a/contact/index.html
+++ b/contact/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="sgf4 IT summary">
         <title>sgf4 - Summary</title>
         <link rel="stylesheet" href="/css/main.css">
     </head>
@@ -14,7 +15,7 @@
 
         </div>
         <nav id="nav">
-            <a href="#">Summary</a> |
+            <a href="/">Summary</a> |
             <a href="/projects/">Projects</a> |
             <a href="/posts/">Posts</a> |
             <a href="/contact/">Contact</a>
