--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Learn from a Linux and based programming enthusiast with a passion for sharing knowledge like a gigachad. Discover comprehensive tutorials on a variety of technical topics, covering everything from the basics to advanced techniques. Join me on my journey to become a based programmer.">
+        <meta name="keywords" content="sgf4, sgf4 programmer, who's sgf4, sgf4 interviews, sgf4 roblox account, sgf4 website, sgf4 blog, sgf4 summary, sgf4 webpage, linux gigachad">
         <title>sgf4 - Summary</title>
         <link rel="stylesheet" href="/css/main.css">
     </head>
