--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 
         </div>
         <nav id="nav">
-            <a href="#">Summary</a> |
+            <a href="/">Summary</a> |
             <a href="/projects/">Projects</a> |
             <a href="/posts/">Posts</a> |
             <a href="/contact/">Contact</a>
         </nav>
         <main>
-            <h2>- Summary -</h2>
+            <h2>Summary</h2>
             <p>
                 Welcome to my personal website where I post all the stuff I do, I hope you enjoy my website! <br>
                 Everyone knows me as sgf4, I love tech and programming efficiently <br>
                 You can hover the pointer over the images to see their name 
             </p>
-            <h3>-- Languages I have the most experience on --</h3>
+            <h3>Languages I have the most experience on</h3>
             <div class="container summary-list">
                 <img src="/img/lang/c.png" title="C" alt="clanguage"> 
                 <img src="/img/lang/c++.png" title="C++" alt="cpluspluslanguage"> 
@@ -52,7 +52,7 @@
             </div>
             <p>Most of my time I'm working on <b>C</b> and <b>C++</b> for my personal projects, these are my favorite programming languages</p>
 
-            <h3>-- Languages that I kind of know of but don't work on them most of the time --</h3>
+            <h3>Languages that I kind of know of but don't work on them most of the time</h3>
             <div class="container summary-list">
                 <img src="/img/lang/java.png" title="Good morning sir" alt="javalanguage"> 
                 <img src="/img/lang/csharp.png" title="C#" alt="csharplanguage"> 
@@ -67,7 +67,7 @@
                 I could say in some posts why I don't like some of these 
             </p>
 
-            <h3>-- Distros/OS I've used --</h3>
+            <h3>Distros/OS I've used</h3>
             <div class="container summary-list">
                 <img src="/img/distro/linuxmint.png" title="Linux Mint" alt="mintlinuxdistro">
                 <img src="/img/distro/debian.png" title="Debian" alt="debiandistro">
@@ -80,7 +80,7 @@
             <p>This list arranges from the easiest distros to the more complicated distros/operating systems</p>
             <p>My favorite ones are <b>FreeBSD, Debian and Gentoo</b></p>
 
-            <h3>-- Some web technologies I've used --</h3>
+            <h3>Some web technologies I've used</h3>
             <div class="container summary-list">
                 <img src="/img/tech/angular.png" title="Angular 12" alt="angulartech">
                 <img src="/img/tech/vue.png" title="Vue.js" alt="vuetech">
@@ -95,7 +95,7 @@
                 These are some of the technologies I used in the academia and personal projects as well<br>
                 I can say the most complicated one is <b>WebGL</b>
             </p>
-            <h3>-- Other technologies/stuff I've used --</h3>
+            <h3>Other technologies/stuff I've used</h3>
             <div class="container summary-list">
                 <img src="/img/tech/mongo.png" title="MongoDB" alt="mongodb">
                 <img src="/img/tech/postgres.png" title="PostgreSQL" alt="postgresql">
