--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,7 @@
             <a href="/contact/">Contact</a>
         </nav>
 
-        <h2>- Projects -</h2>
+        <h2>Projects</h2>
 
         <div class="container">
             <div class="title">lostc</div>
