--- a/contact/index.html
+++ b/contact/index.html
@@ -11,9 +11,6 @@
     <body>
         <header></header>
         <h1 id="title"><img src="/img/sgf4.png" id="pfp">sgf4<img src="/img/misc/spain.png" title="ñ" id="flag"></h1>
-        <div id="contact">
-
-        </div>
         <nav id="nav">
             <a href="/">Summary</a> |
             <a href="/projects/">Projects</a> |
@@ -21,10 +18,11 @@
             <a href="/contact/">Contact</a>
         </nav>
     
+        <h2>Contact</h2>
         <div class="contact container">
-            <img src="/img/contact/mail.png" alt="email" title="Email"> sgf4@cock.li<hr>
-            <img src="/img/contact/discord.png" alt="discord" title="Discord"> sgf4#4903<hr>
-            <img src="/img/contact/github.png" alt="github" title="Github"> <a href="https://github.com/sgf4/">sgf4</a>
+            <img src="img/mail.png" alt="email" title="Email"> sgf4@cock.li<hr>
+            <img src="img/discord.png" alt="discord" title="Discord"> sgf4#4903<hr>
+            <img src="img/github.png" alt="github" title="Github"> <a href="https://github.com/sgf4/">sgf4</a>
         </div>
         
     </body>
