--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <meta property="og:site_name" content="sgf4's summary">
 
         <title>sgf4 - Summary</title>
+        <link rel="icon" href="https://avatars.githubusercontent.com/u/112823164?v=4">
         <link rel="stylesheet" href="/css/main.css">
     </head>
     <body>
         <header></header>
-        <h1 id="title"><img src="/img/sgf4.png" id="pfp">sgf4<img src="/img/misc/spain.png" title="ñ" id="flag"></h1>
+        <h1 id="title"><img src="https://avatars.githubusercontent.com/u/112823164?v=4" id="pfp">Horu<img src="/img/misc/spain.png" title="ñ" id="flag"></h1>
         <div id="contact">
 
         </div>
@@ -36,7 +37,7 @@
             <h2>Summary</h2>
             <p>
                 Welcome to my personal website where I post all the stuff I do, I hope you enjoy my website! <br>
-                Everyone knows me as sgf4, I love tech and programming efficiently <br>
+                Everyone knows me as Horu, I love tech and programming efficiently <br>
                 You can hover the pointer over the images to see their name 
             </p>
             <h3>Languages I have the most experience on</h3>
