--- a/contact/index.html
+++ b/contact/index.html
@@ -7,10 +7,11 @@
         <meta name="description" content="sgf4 IT summary">
         <title>sgf4 - Summary</title>
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="icon" href="https://avatars.githubusercontent.com/u/112823164?v=4">
     </head>
     <body>
         <header></header>
-        <h1 id="title"><img src="/img/sgf4.png" id="pfp">sgf4<img src="/img/misc/spain.png" title="ñ" id="flag"></h1>
+        <h1 id="title"><img src="https://avatars.githubusercontent.com/u/112823164?v=4" id="pfp">Horu<img src="/img/misc/spain.png" title="ñ" id="flag"></h1>
         <nav id="nav">
             <a href="/">Summary</a> |
             <a href="/projects/">Projects</a> |
@@ -21,7 +22,7 @@
         <h2>Contact</h2>
         <div class="contact container">
             <img src="img/mail.png" alt="email" title="Email"> sgf4@cock.li<hr>
-            <img src="img/discord.png" alt="discord" title="Discord"> sgf4#4903<hr>
+            <img src="img/discord.png" alt="discord" title="Discord"> Horu#1832<hr>
             <img src="img/github.png" alt="github" title="Github"> <a href="https://github.com/sgf4/">sgf4</a>
         </div>
         
