--- a/projects/index.html
+++ b/projects/index.html
@@ -6,10 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>sgf4 - Projects</title>
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="icon" href="https://avatars.githubusercontent.com/u/112823164?v=4">
     </head>
     <body>
         <header></header>
-        <h1 id="title"><img src="/img/sgf4.png" id="pfp">sgf4<img src="/img/misc/spain.png" id="flag"></h1>
+        <h1 id="title"><img src="https://avatars.githubusercontent.com/u/112823164?v=4" id="pfp">Horu<img src="/img/misc/spain.png" id="flag"></h1>
         <nav id="nav">
             <a href="/">Summary</a> |
             <a href="/projects/">Projects</a> |
