--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta property="og:description" content="sgf4's website">
         <meta property="og:site_name" content="sgf4's summary">
 
-        <title>sgf4 - Summary</title>
+        <title>sgf4's Summary</title>
         <link rel="icon" href="https://avatars.githubusercontent.com/u/112823164?v=4">
         <link rel="stylesheet" href="/css/main.css">
     </head>
