--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <img src="/img/distro/artix.png" title="Artix Linux" alt="artixlinuxdistro">
                 <img src="/img/distro/gentoo.png" title="Gentoo Linux" alt="gentoolinuxdistro">
                 <img src="/img/distro/freebsd.png" title="FreeBSD OS" alt="freebsdos">
+                <img src="/img/distro/opensuse.png" title="OpenSUSE" alt="opensusedistro">
             </div>
 
             <p>This list arranges from the easiest distros to the more complicated distros/operating systems</p>
